fixed the overflow occuring and removed the unwanted space below

--- a/src/assets/styles/ImageSlider.css
+++ b/src/assets/styles/ImageSlider.css
@@ -3,7 +3,8 @@
   margin-inline: auto;
   position: relative;
   top: 75px;
-  min-height: 45vh;
+  padding-bottom: 14px;
+  /* min-height: 45vh; */
 }
 
 .slick-slide {
@@ -11,7 +12,7 @@
 }
 
 .slick-list {
-  overflow: visible;
+  overflow: hidden;
 }
 
 .slick-track {
